# rust-demo-app

./: Cargo.toml  Dockerfile  LICENSE  README.md  openshift-deploy.yaml
src/: main.rs
